feat(bk): Impl stuff